# maplang

./: .clang-format  .gitignore  BlueprintBuilder.cpp  BlueprintBuilder.h  Buffer.h  CMakeLists.txt  ContextualNode.cpp  ContextualNode.h  DataGraph.cpp  DataGraph.h  GraphLoader.cpp  GraphLoader.h  ICohesiveNode.h  INode.h  IPacketPusher.h  IPartitionedNode.h  IPathable.h  ISignalBroadcastContext.h  ISink.h  ISource.h  ISubgraphContext.h  JsonGraphBuilder.cpp  JsonGraphBuilder.h  MemoryStream.cpp  MemoryStream.h  NOTICE  NodeRegistration.cpp  NodeRegistration.h  ObjectPool.h  Packet.h  PathablePacket.h  README.md  UvLoopRunner.cpp  UvLoopRunner.h  logging.h  main.cpp  sip-minimal-main.cpp
Graphs/: Contextuals.drawio  HTTP Get.drawio  HTTP IP echo.drawio  Parameter Propagation.drawio  SIP minimal.drawio  SIP.drawio  Signal Propagation with Loops.drawio
blueprints/: httpIpEcho.json
docs/: Blueprints.md  CohesiveGroups.md  Graphs.md  HighAvailability.md  ImplementingNodes.md  Interfaces.md  OrganizationalRisk.md  Roadmap.md  SteeringCommittee.md  Subcomponents.md  Testing.md  UsingArchitectureAndImplementationFiles.md
graph/: DefaultGraphEdge.h  Edge.h  Graph.cpp  Graph.h  GraphElement.h  GraphImpl.h  SignalBroadcaster.cpp  SignalBroadcaster.h
http-get-demo/: PrintBufferAsString.cpp  PrintBufferAsString.h  http-get-main.cpp
include-private/: Cleanup.h  LibuvUtilities.h  concurrentqueue.h  logging.h
include-private/nodes/: AddParametersNode.h  BufferAccumulatorNode.h  ContextualNode.h  DataGraphNode.h  HttpRequestExtractor.h  HttpRequestHeaderWriter.h  HttpResponseExtractor.h  HttpResponseWriter.h  OrderedPacketSender.h  PacketReader.h  PacketWriter.h  ParameterExtractor.h  ParameterRouter.h  PassThroughNode.h  SendOnce.h  UvTcpConnectionGroup.h  VolatileKeyValueSet.h  VolatileKeyValueStore.h
include/maplang/: BlockOnEmptyConcurrentQueue.h  BlockingBufferPool.h  BlockingObjectPool.h  BlueprintBuilder.h  Buffer.h  BufferFactory.h  BufferPool.h  ContextualNode.h  DataGraph.h  DotExporter.h  Errors.h  Factories.h  FactoriesBuilder.h  Graph.h  GraphBuilder.h  GraphEdge.h  GraphNode.h  HttpUtilities.h  IBufferFactory.h  ICohesiveGroup.h  IFactories.h  IGroup.h  IImplementation.h  IImplementationFactory.h  IImplementationFactoryBuilder.h  INode.h  IPacketPusher.h  IPathable.h  IRingStreamFactory.h  ISink.h  ISource.h  ISubcomponent.h  ISubgraphContext.h  IUvLoopRunnerFactory.h  ImplementationFactory.h  ImplementationFactoryBuilder.h  Instance.h  JsonGraphBuilder.h  JsonUtil.h  LambdaPacketPusher.h  (+20 more)
include/maplang/graph/: DefaultGraphEdge.h  Graph.h  GraphElement.h  GraphImpl.h
ip-echo-demo/: HttpResponseWithAddressAsBody.cpp  HttpResponseWithAddressAsBody.h  ip-echo-architecture.dot  ip-echo-implementation.json  ip-echo-main.cpp  main.cpp
nodes/: ContextualNode.cpp  ContextualNode.h  HttpRequestExtractor.cpp  HttpRequestExtractor.h  HttpResponseWithAddressAsBody.cpp  HttpResponseWithAddressAsBody.h  HttpResponseWriter.cpp  HttpResponseWriter.h  PacketReader.cpp  PacketReader.h  PacketWriter.cpp  PacketWriter.h  SendOnce.cpp  SendOnce.h  SipRequestExtractor.cpp  SipRequestExtractor.h  VolatileKeyValueSet.cpp  VolatileKeyValueSet.h  VolatileKeyValueStore.cpp  VolatileKeyValueStore.h
nodes/tcp/: UvTcpClient.cpp  UvTcpClient.h  UvTcpClientGroup.cpp  UvTcpClientGroup.h  UvTcpConnector.h  UvTcpReceiver.h  UvTcpSender.h  UvTcpServerGroup.cpp  UvTcpServerGroup.h  UvTcpServerNode.cpp  UvTcpServerNode.h
src/: BlockingBufferPool.cpp  BlueprintBuilder.cpp  Buffer.cpp  BufferPool.cpp  DataGraph.cpp  DotExporter.cpp  Errors.cpp  Factories.cpp  FactoriesBuilder.cpp  Graph.cpp  GraphBuilder.cpp  GraphNode.cpp  HttpUtilities.cpp  ImplementationFactory.cpp  ImplementationFactoryBuilder.cpp  Instance.cpp  JsonGraphBuilder.cpp  LibuvUtilities.cpp  MemoryStream.cpp  NodeFactory.cpp  NodeRegistration.cpp  PacketDeliveryType.cpp  PathablePacket.cpp  RingStreamFactory.cpp  Subcomponent.cpp  TaskLooper.cpp  UvLoopRunner.cpp  main.cpp
src/nodes/: AddParametersNode.cpp  BufferAccumulatorNode.cpp  ContextualNode.cpp  DataGraphNode.cpp  HttpRequestExtractor.cpp  HttpRequestHeaderWriter.cpp  HttpResponseExtractor.cpp  HttpResponseWriter.cpp  OrderedPacketSender.cpp  PacketReader.cpp  PacketWriter.cpp  ParameterExtractor.cpp  ParameterRouter.cpp  PassThroughNode.cpp  SendOnce.cpp  UvTcpConnectionGroup.cpp  VolatileKeyValueSet.cpp  VolatileKeyValueStore.cpp
tests/: AddParameterTests.cpp  BlockingObjectPoolTests.cpp  BufferAccumulatorNodeTests.cpp  BufferPoolTests.cpp  CMakeLists.txt  DataGraphNodeTests.cpp  DataGraphTests.cpp  DotExporterTests.cpp  GraphBuilderTests.cpp  HttpRequestExtractorTests.cpp  MemoryStreamTests.cpp  ParameterExtractorTests.cpp  ParameterRouterTests.cpp  PassThroughNodeTests.cpp  RingStreamTests.cpp  StreamUtilTests.cpp
